--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1,3 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+
+@theme {
+    --font-sans: "Source Sans 3", sans-serif;
+    --font-baloo: "Baloo 2", sans-serif;
+}
+
+/* https://daisyui.com/docs/config/ */
+@plugin "daisyui" {
+    themes: light --default; /* https://daisyui.com/docs/themes/ */
+    root: ":root";
+    include: button, navbar, card, divider, carousel;
+    /* exclude: ; I think you're supposed to only use include, or exclude, and not both. */
+    prefix: "daisy-";
+    logs: true; /* turn this off if you want to clean up the console output for some reason */
+}
+
+@plugin "daisyui/theme" {
+    name: customTheme;
+    default: true; /* set as default */
+    prefersdark: false; /* set as default dark mode (prefers-color-scheme:dark) */
+    color-scheme: light; /* color of browser-provided UI */
+
+    --color-base-100: oklch(0.95 0.0203 94.53);
+    /*--color-base-200: oklch(95% 0.03 240);*/
+    /*--color-base-300: oklch(92% 0.04 240);*/
+    /*--color-base-content: oklch(20% 0.05 240);*/
+    --color-primary: oklch(0.68 0.1903 132.16);
+    /*--color-primary-content: oklch(98% 0.01 240);*/
+    --color-secondary: oklch(0.48 0.191674 30.0862);
+    /*--color-secondary-content: oklch(98% 0.01 200);*/
+    --color-accent: oklch(0.29 0.0879 266.12);
+    /*--color-accent-content: oklch(98% 0.01 160);*/
+    --color-neutral: oklch(0.76 0.0317 238.99);
+    /*--color-neutral-content: oklch(98% 0.01 240);*/
+    /*--color-info: oklch(70% 0.2 220);*/
+    /*--color-info-content: oklch(98% 0.01 220);*/
+    /*--color-success: oklch(65% 0.25 140);*/
+    /*--color-success-content: oklch(98% 0.01 140);*/
+    /*--color-warning: oklch(80% 0.25 80);*/
+    /*--color-warning-content: oklch(20% 0.05 80);*/
+    /*--color-error: oklch(65% 0.3 30);*/
+    /*--color-error-content: oklch(98% 0.01 30);*/
+
+    /* border radius */
+    --radius-selector: 1rem;
+    --radius-field: 0.25rem;
+    --radius-box: 0.5rem;
+
+    /* base sizes */
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    /* border size */
+    --border: 1px;
+
+    /* effects */
+    --depth: 1;
+    --noise: 0;
+}
